codepkg/objects/Agency_Non_Suppression_Personnel__c.object
<CustomObject>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agency Non-Suppression Personnels</relationshipLabel>
        <relationshipName>Agency_Non_Suppression_Personnels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Approval_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_End_Date_Less_Than_Today__c</fullName>
        <formula>IF( End_Date__c &lt; TODAY() , True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is End Date Less Than Today</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MACS_ID__c</fullName>
        <formula>Agency__r.MACS_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MACS ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reject_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reject Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revised_From_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revised From Id</label>
        <referenceTo>Agency_Non_Suppression_Personnel__c</referenceTo>
        <relationshipLabel>Agency Non-Suppression Personnels</relationshipLabel>
        <relationshipName>Agency_Non_Suppression_Personnels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <label>Agency Non-Suppression Personnel</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Agency__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Mars_Non_SupressionMem_Agency_Non_Suppression_Personnel</fullName>
        <filterScope>Queue</filterScope>
        <label>Mars Non-SupressionMem</label>
        <queue>Mars_Non_SupressionMem</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pending_Approval_Queue</fullName>
        <columns>MACS_ID__c</columns>
        <columns>Agency__c</columns>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Pending Review</value>
        </filters>
        <label>Pending Review Queue</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Agency Non-Suppression Personnel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agency Non-Suppression Personnels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>